--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ a:hover{
 	color: #be2e0d;
 }
 
+hr{
+	width: 100%;
+	padding: 10px 0;
+	margin: 10px 0;
+	border-bottom: 1px dashed #ccc;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+}
+
 /*Sub menu*/
 
 #subMenu{
@@ -144,7 +154,7 @@ a:hover{
 
 .containerNews{
 	display: flex;
-	margin-top: 100px;
+	margin: 100px 0;
 }
 
 .containerNews h3{
@@ -251,7 +261,7 @@ a:hover{
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: .9px;
 	text-transform: uppercase;
-	margin: 100px 0;
+	margin: 50px 0;
 	align-items: center;
 }
 
@@ -276,4 +286,29 @@ a:hover{
 
 .containerDossier p{
 	color: #999;
+}
+
+.imgcontentNews2{
+	width: 150px;
+	border: 1px solid #999;
+}
+
+.newCenterBig{
+	width: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	text-align: justify;
+}
+
+.newCenterBig img{
+	width: 500px;
+}
+
+.newCenterBig p{
+	color: black;
+	width: 500px;
+}
+
+.contentNewsRight img{
+	width: 300px;
 }
