--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,25 @@ a:hover{
 .logo img:hover{
 	filter: none;
 }
+
+/*Search bar*/
+
+#generalSearch{
+	display: flex;
+	flex-direction: row;
+}
+
+.searchIcon{
+	background: black;
+}
+
+input[type=text] {
+	height: 36px;
+}
+
+.searchIcon{
+	display: flex;
+	align-items: center;
+	padding-right: 8px;
+	padding-left: 8px;
+}
