--- a/components/rowNews.html
+++ b/components/rowNews.html
@@ -1,6 +1,6 @@
 <hr class = "dottedLine">
 <div class = newsContainer>
-    <div class = "news">
+    <div class = "news ">
         <img class = "newsImage" src = "img/clarice_lispector_por_maureen_bisilliat_em_agosto_de_1969._acervo_ims-edf25.jpg" alt = "cc Maureen Bisilliat / Instituto Moreira Salles, 1969">
         <h2>Une gauche assise à la droite du peuple</h2>
         <div class = "authorDate">Gilles Costaz, janvier 2021</div>
@@ -15,20 +15,19 @@
         <h2>Des mondes sur la planche</h2>
         <div class = "authorDate">Morvandiau, janvier 2021</div>
     </div>
-    <div class = "news">
+    <div class = "news borderDashed">
         <img class = "newsImage" src = "img/arton58948.jpg" alt = "">
         <h2>Histoire populaire  de la France</h2>
         <div class = "authorDate">Gérard Noiriel, août 2018</div>
     </div>
-    <div class = "news">
+    <div class = "news borderDashed">
         <img class = "newsImage" src = "img/arton15581.jpg" alt = "">
         <h2>La montagne victime des sports d’hiver</h2>
         <div class = "authorDate">Philippe Descamps, février 2008</div>
     </div>
-    <div class = "news">
+    <div class = "news borderDashed">
         <img class = "newsImage" src = "img/arton62584.jpg" alt = "">
         <h2>Il y a cent ans naissait un parti authenti­quement populaire</h2>
         <div class = "authorDate">Julian Mischi, décembre 2020 </div>
     </div>
 </div>
-<hr>
