--- a/css/rowNews.css
+++ b/css/rowNews.css
@@ -14,6 +14,12 @@ hr .dottedLine {
     width: 32%;
     height: 45%;
     margin: 15px auto;
+
+}
+
+.borderDashed{
+    border-top: 1px dashed #999;
+    padding-top: 50px;
 }
 
 .newsImage {
