final front desktop and mobile

--- a/components/news.html
+++ b/components/news.html
@@ -96,7 +96,7 @@
 <div class="containerDossier">
     <a href="#" >
         <img src="img/dossier.jpeg" alt="#" />
-        <h3>Dossier<span> États-Unis : changement ou restauration ?</span><p> décembre 2020</p></h3>
+        <h2><span>Dossier</span> États-Unis : changement ou restauration ?<span class="dossierGrey"> décembre 2020</span></h2>
     </a>
 </div>
 <hr>
@@ -140,7 +140,7 @@
             </p>
         </a>
     </div>
-    <div class="contentNewsRight">
+    <div class="contentNewsRight2">
         <a href="#">
             <img src="img/Plates-formes de rééducation.jpeg" alt="" />
             <h3>
