--- a/css/rowNews.css
+++ b/css/rowNews.css
@@ -8,33 +8,50 @@ hr .dottedLine {
     height: 600px;
     width: 100%;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .news  {
     width: 32%;
     height: 45%;
-    margin: 15px auto;
+    margin: 15px auto -10px auto;
 
 }
 
 .borderDashed{
-    border-top: 1px dashed #999;
+    border-top: 1px dashed lightgrey;
     padding-top: 50px;
 }
 
 .newsImage {
+    display: block;
     width: 100%;
     height: auto;
 }
 
 .news h2 {
     font-size: 1.25em;
-    font-family: Georgia, 'Times New Roman', serif;
+    font-weight: 400;
+    font-family: Walbaum, Georgia, 'Times new roman', serif;
     color: black;
 }
 
 .news .authorDate {
     font-size: 1em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     color: grey;
+}
+
+a:hover h2{
+    color: #fa3b0f;
+}
+
+a:hover .background img {
+    mix-blend-mode: luminosity;
+}
+
+a .background {
+    width: 100%;
+    height: auto;
+    background: #be2e0d;
 }
