--- a/components/footer.html
+++ b/components/footer.html
@@ -1,42 +1,92 @@
-﻿<div class="footer">
-	<div class="informationContainer">
-		<span class="first">
-			<h3>Le journal</h3>
-		</span>
-		<a href="#">Suivre nos actualités</a><br>
-		<a href="#">Lettre d'information</a><br>
-		<a href="#">Nous contacter</a><br>
-		<a href="#">L'équipe</a><br>
-		<a href="#">Édition électronique</a><br>
-	</div>
-	<div class="informationContainer">
-		<span class="first">
-			<h3>Services</h3>
-		</span>
-		<a href="#">Abonnements</a><br>
-		<a href="#">Réabonnement</a><br>
-		<a href="#">Boutique</a><br>
-		<a href="#">Dons</a><br>
-		<a href="#">Abonnements institutionnels</a><br>
-	</div>
-	<div class="informationContainer">
-		<span class="first">
-			<h3>À propos</h3>
-		</span>
-		<a href="#">Qui sommes-nous ?</a><br>
-		<a href="#">Editions internationales</a><br>
-		<a href="#">Les amis du <i>Diplo</i></a><br>
-		<a href="#">Mentions légales</a><br>
-		<a href="#">Politique de confidentialité</a><br>
-	</div>
-	<div class="informationContainer">
-		<span class="first">
-			<h3>Le Monde diplomatique</h3>
-		</span>
-		<a href="#">Archives</a><br>
-		<a href="#">Journal audio</a><br>
-		<a href="#">Les blogs du <i>Diplo</i></a><br>
-		<a href="#">Manière de voir</a><br>
-		<a href="#">Cartographie</a><br>
-	</div>
-</div>
+﻿<footer>
+	<ul class="informationContainer">
+		<li>
+			<ul>
+				<li class="first">
+					<h3>Le journal</h3>
+				</li>
+				<li class="listPoint">
+					<a href="#">Suivre nos actualités</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Lettre d'information</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Nous contacter</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">L'équipe</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Édition électronique</a>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul>
+				<li class="first">
+					<h3>Services</h3>
+				</li>
+				<li class="listPoint">
+					<a href="#">Abonnements</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Réabonnement</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Boutique</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Dons</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Abonnements institutionnels</a>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul>
+				<li class="first">
+					<h3>À propos</h3>
+				</li>
+				<li class="listPoint">
+					<a href="#">Qui sommes-nous ?</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Editions internationales</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Les amis du <i>Diplo</i></a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Mentions légales</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Politique de confidentialité</a>
+				</li>
+			</ul>
+		</li>
+		<li>
+			<ul>
+				<li class="first">
+					<h3>Le Monde diplomatique</h3>
+				</li>
+				<li class="listPoint">
+					<a href="#">Archives</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Journal audio</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Les blogs du <i>Diplo</i></a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Manière de voir</a>
+				</li>
+				<li class="listPoint">
+					<a href="#">Cartographie</a>
+				</li>
+			</ul>
+		</li>
+	</ul>
+</footer>
