--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ hr{
 #generalContainer{
 	max-width: 960px;
 	background-color: white;
-	margin: 0 auto 50px;
+	margin: 0 auto 0;
 	min-height: 1200px;
-	padding: 20px 30px 0;
+	padding: 20px 30px 15px;
 }
